<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="RotatePick" Id="{9df090bb-2f07-44e2-8cd1-f5226b2dc46c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK RotatePick
VAR_INPUT
	ENI				: BOOL;
	CycleAtLayer	: ARRAY [1..4] OF UINT;
	Line			: INT;
	GoodBarcode		: ARRAY [1..4] OF BOOL;
	dtRecipe		: ARRAY [1..4] OF stProductinfo;
END_VAR
VAR_OUTPUT
	ENO				: BOOL;
	Rotate			: BOOL;	
	intRotate		: USINT;	
END_VAR

VAR
	FrontBarcode	: BOOL;

END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF ENI THEN
	ENO:=TRUE;
	
	IF GoodBarcode[1] OR GoodBarcode[2] THEN
		FrontBarcode	:= TRUE;
	ELSIF GoodBarcode[3] OR GoodBarcode[4] THEN
		FrontBarcode	:= FALSE;
	END_IF
	
		
	IF Line <> 0 THEN
		CASE dtRecipe[Line].ProductPattern OF
			1: //Japan Case
				IF FrontBarcode THEN
					CASE CycleAtLayer[Line] OF
						1,2,3,4,5,7,9,15,17: Rotate	:= TRUE; intRotate	:= 2;
					ELSE
						Rotate	:= FALSE; intRotate	:= 1;
					END_CASE
				ELSE
					CASE CycleAtLayer[Line] OF
						6,8,16,18: Rotate	:= TRUE; intRotate	:= 2;
					ELSE
						Rotate	:= FALSE; intRotate	:= 1;
					END_CASE
				END_IF	
		
			2: //Shipping Case 20
				IF FrontBarcode THEN
					CASE CycleAtLayer[Line] OF
						1,2,3,4,6,11,12,13,14,16: Rotate	:= TRUE; intRotate	:= 2;
					ELSE
						Rotate	:= FALSE; intRotate	:= 1;
					END_CASE
				ELSE
					CASE CycleAtLayer[Line] OF
						5,7,8,9,10,15,17,18,19,20: Rotate	:= TRUE; intRotate	:= 2;
					ELSE
						Rotate	:= FALSE; intRotate	:= 1;
					END_CASE
				END_IF
				
			3: //Small Case - LU 26 LU 13
				IF FrontBarcode THEN
					CASE CycleAtLayer[Line] OF
						1,2,3,4,5,7,13,14,15,16,17,19: Rotate	:= TRUE; intRotate	:= 2;
					ELSE
						Rotate	:= FALSE; intRotate	:= 1;
					END_CASE
				ELSE
					CASE CycleAtLayer[Line] OF
						6,8,9,10,11,12,18,20,21,22,23,24: Rotate	:= TRUE; intRotate	:= 2;
					ELSE
						Rotate	:= FALSE; intRotate	:= 1;
					END_CASE
				END_IF
				
			4: //Small Case - LU 18
				IF FrontBarcode THEN
					CASE CycleAtLayer[Line] OF
						1,3,5,6,7,11,13: Rotate	:= TRUE; intRotate	:= 2;
					ELSE
						Rotate	:= FALSE; intRotate	:= 1;
					END_CASE
				ELSE
					CASE CycleAtLayer[Line] OF
						2,4,8,9,10,12,14: Rotate	:= TRUE; intRotate	:= 2;
					ELSE
						Rotate	:= FALSE; intRotate	:= 1;
					END_CASE
				END_IF
				
		END_CASE
	ELSE
		intRotate	:= 0;	
	END_IF;
	
END_IF;]]></ST>
    </Implementation>
    <LineIds Name="RotatePick">
      <LineId Id="626" Count="1" />
      <LineId Id="771" Count="2" />
      <LineId Id="775" Count="1" />
      <LineId Id="774" Count="0" />
      <LineId Id="770" Count="0" />
      <LineId Id="714" Count="0" />
      <LineId Id="764" Count="0" />
      <LineId Id="757" Count="0" />
      <LineId Id="835" Count="12" />
      <LineId Id="833" Count="1" />
      <LineId Id="758" Count="0" />
      <LineId Id="769" Count="0" />
      <LineId Id="761" Count="1" />
      <LineId Id="767" Count="1" />
      <LineId Id="763" Count="0" />
      <LineId Id="760" Count="0" />
      <LineId Id="779" Count="3" />
      <LineId Id="778" Count="0" />
      <LineId Id="783" Count="0" />
      <LineId Id="881" Count="0" />
      <LineId Id="883" Count="12" />
      <LineId Id="882" Count="0" />
      <LineId Id="848" Count="0" />
      <LineId Id="850" Count="12" />
      <LineId Id="849" Count="0" />
      <LineId Id="802" Count="0" />
      <LineId Id="759" Count="0" />
      <LineId Id="915" Count="0" />
      <LineId Id="917" Count="0" />
      <LineId Id="765" Count="0" />
      <LineId Id="817" Count="0" />
      <LineId Id="352" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>